--- a/src/main/java/cse/sms/view/CM_CourseRevise.form
+++ b/src/main/java/cse/sms/view/CM_CourseRevise.form
@@ -52,8 +52,8 @@
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="newName" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Component id="newMajor" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                   <Component id="newGrade" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
-                                  <Component id="newInfo" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
@@ -101,14 +101,14 @@
                               </Group>
                               <EmptySpace pref="25" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="newGrade" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                                  <Component id="newMajor" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                                   <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="newInfo" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                          <Component id="newGrade" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
@@ -159,20 +159,20 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="&#xb9d1;&#xc740; &#xace0;&#xb515;" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#xd559;&#xc810;"/>
+        <Property name="text" type="java.lang.String" value="&#xd559;&#xacfc;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="newGrade">
+    <Component class="javax.swing.JTextField" name="newMajor">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="&#xb9d1;&#xc740; &#xace0;&#xb515;" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#xc124;&#xba85;"/>
+        <Property name="text" type="java.lang.String" value="&#xd559;&#xc810;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="newInfo">
+    <Component class="javax.swing.JTextField" name="newGrade">
     </Component>
     <Component class="javax.swing.JButton" name="jButtonInfo">
       <Properties>
